--- a/plataforma/templates/base.html
+++ b/plataforma/templates/base.html
@@ -1,17 +1,14 @@
 {% load static %}
 <!--
 
-
 (_(
 /_/'_____/)
 "  |      |
    |""""""| Powered by bode.io
 
-
 -->
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="utf-8">
     <title>Prospera</title>
@@ -19,7 +16,6 @@
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
     <link href="{% static "css/base.min.css" %}" rel="stylesheet">
 </head>
-
 <body>
     <nav class="navbar navbar-inverse navbar-prospera">
       <div class="container">
@@ -50,6 +46,17 @@
       </div>
     </nav>
     <div class="container content">
+        {% if messages %}
+            {% for message in messages %}
+            <div class="alert alert-{% if message.tags == "error" %}danger{% else %}{{ message.tags }}{% endif %} alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                {{ message }}
+            </div>
+            {% endfor %}
+        {% endif %}
         {% block content %}{% endblock %}
     </div>
+    <script src="{% static "js/jquery-1.12.4.min.js" %}"></script>
+    <script src="{% static "js/bootstrap.min.js" %}"></script>
+    <script src="{% static "js/alert.js" %}"></script>
 </body>
