--- a/plataforma/templates/pages/no_create_form.html
+++ b/plataforma/templates/pages/no_create_form.html
@@ -2,11 +2,25 @@
 {% block content %}
 
 <div class="create-account">
-    <h1>Nova Conta</h1>
-    <form class="form-signin" method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Criar Conta</button>
+    <h2>Nova Conta</h2>
+    <form method="POST">
+        {% if form.non_field_errors %}
+        <div class="alert alert-danger alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          {% for err in form.non_field_errors %}
+            {{ err }}
+          {% endfor %}
+        </div>
+      {% endif %}
+      {% csrf_token %}
+
+      {% for field in form %}
+        <div class="form-group{% if field.errors%} has-error{% endif %}">
+               <input id="{{ field.auto_id }}" class="form-control" placeholder="{{ field.label }}" name="{{ field.name }}" type="{{ field.field.widget.input_type }}">
+         <span class="help-block">{{ field.errors }}</span>
+              </div>
+      {% endfor %}
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Criar Conta</button>
     </form>
 </div>
 
