--- a/plataforma/templates/registration/login.html
+++ b/plataforma/templates/registration/login.html
@@ -3,7 +3,7 @@
 {% block content %}
   <div class="login">
     <h2>Login</h2>
-    <form class="form-signin" method="post">
+    <form method="POST">
       {% if form.non_field_errors %}
         <div class="alert alert-danger alert-dismissible" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -16,7 +16,7 @@
 
       {% for field in form %}
         <div class="form-group{% if field.errors%} has-error{% endif %}">
-			   <input id="{{ field.auto_id }}" class="form-control" placeholder="{{ field.label }}" name="{{ field.name }}" type="text">
+			   <input id="{{ field.auto_id }}" class="form-control" placeholder="{{ field.label }}" name="{{ field.name }}" type="{{ field.field.widget.input_type }}">
          <span class="help-block">{{ field.errors }}</span>
 			  </div>
       {% endfor %}
