--- a/plataforma/static/dev/scss/_colors.scss
+++ b/plataforma/static/dev/scss/_colors.scss
@@ -1,5 +1,11 @@
 $prime: rgb(255, 49, 122);
 $primeHighlight: rgb(152, 20, 88);
 
+$cinza: rgb(82, 82, 82);
+
 $preto: rgb(0,0,0);
 $branco: rgb(255,255,255);
+
+$github: rgb(51, 51, 51);
+$twitter: rgb(84, 171, 235);
+$facebook: rgb(58, 89, 152);
