--- a/plataforma/templates/base.html
+++ b/plataforma/templates/base.html
@@ -14,6 +14,7 @@
     <title>Prospera</title>
     <meta name="author" content="Bode.io">
     <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
+    <link href="{% static "css/font-awesome.min.css" %}" rel="stylesheet">
     <link href="{% static "css/base.min.css" %}" rel="stylesheet">
 </head>
 <body>
