--- a/plataforma/templates/registration/login.html
+++ b/plataforma/templates/registration/login.html
@@ -22,10 +22,19 @@
       {% endfor %}
       <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
     </form>
+
+    <hr>
+    <div class="row">
+      <div class="col-md-3">
+        <a href="{% url 'social:begin' 'github' %}" class="btn btn-primary btn-github">Entrar com <i class="fa fa-github" aria-hidden="true"></i></a>
+      </div>
+      <div class="col-md-3 col-md-offset-1">
+        <a href="{% url 'social:begin' 'twitter' %}" class="btn btn-primary btn-twitter">Entrar com <i class="fa fa-twitter" aria-hidden="true"></i></a>
+      </div>
+      <div class="col-md-3 col-md-offset-1">
+        <a href="{% url 'social:begin' 'facebook' %}" class="btn btn-primary btn-facebook">Entrar com <i class="fa fa-facebook" aria-hidden="true"></i></a>
+      </div>
+    </div>
   </div>
-  <br>
-  <p><strong>-- OR --</strong></p>
-  <a href="{% url 'social:begin' 'github' %}">Login with GitHub</a><br>
-  <a href="{% url 'social:begin' 'twitter' %}">Login with Twitter</a><br>
-  <a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a>
+
 {% endblock %}
