Arrumando formulários para nos e objeto

--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -121,4 +121,16 @@
             border-top-right-radius: 0;
         }
     }
+
+    // Create Nos
+    .nos-create{
+        max-width: 400px;
+        margin: 0 auto;
+    }
+
+    // Create Object
+    .object-create{
+        max-width: 400px;
+        margin: 0 auto;
+    }
 }
