--- a/plataforma/templates/pages/nos_detail.html
+++ b/plataforma/templates/pages/nos_detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div id="presentation-detail">
+<div id="nos-detail">
     <h1>{{ nos.nome }}</h1>
 
     <section>
