--- a/plataforma/templates/pages/nos_list.html
+++ b/plataforma/templates/pages/nos_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div id="presentation">
+<div id="nos">
     <h1>Nós</h1>
 
     <div class="row">
