Adicionando nova rede para login. Modificando um pouco o layout.

--- a/plataforma/static/dev/scss/_colors.scss
+++ b/plataforma/static/dev/scss/_colors.scss
@@ -9,3 +9,4 @@ $branco: rgb(255,255,255);
 $github: rgb(51, 51, 51);
 $twitter: rgb(84, 171, 235);
 $facebook: rgb(58, 89, 152);
+$google: rgb(219, 72, 18);
