--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -84,9 +84,10 @@
         }
 
         hr{
-            margin: 40px auto;
             left: 0;
             right: 0;
+            margin-top: 30px;
+            margin-bottom: 20px;
         }
         .btn-github, .btn-twitter, .btn-facebook{
             display: inline-block;
@@ -101,6 +102,10 @@
         }
         .btn-facebook{
             background-color: $facebook;
+            border-color: $cinza;
+        }
+        .btn-google{
+            background-color: $google;
             border-color: $cinza;
         }
     }
