--- a/plataforma/static/dev/scss/_colors.scss
+++ b/plataforma/static/dev/scss/_colors.scss
@@ -1,5 +1,8 @@
-$prime: rgb(255, 49, 122);
+$prime: rgba(255, 41, 106, 1);
 $primeHighlight: rgb(152, 20, 88);
+
+$azul: rgba(17, 28, 60, 1);
+$azulClaro: rgba(33, 239, 233, 1);
 
 $cinza: rgb(82, 82, 82);
 
