--- a/plataforma/templates/pages/landing_page.html
+++ b/plataforma/templates/pages/landing_page.html
@@ -6,12 +6,12 @@
   <section class="presentation-content">
     <img class="logo" src="{% static 'img/prospera-logo.png' %}" alt="Prospera">
 
-    <div class="buttons-container text-center">
+    <div class="prospera-margin text-center">
       <button class="btn btn-prospera btn-lg" href="{% url 'login' %}" role="button">Entrar</button>
       <button class="btn btn-prospera btn-lg" href="{% url 'no_create' %}" role="button">Criar Conta</button>
     </div>
 
-    <div class="buttons-container text-center">
+    <div class="prospera-margin text-center">
       <h3>Emissão de Prospers até agora:</h3>
       <div class="prsps-counter">
         <img class="inline-block" src="{% static 'img/prsp.png' %}" alt="Prsp">
@@ -21,7 +21,7 @@
 
     <h3 class="text-center">Distribuição, Movimentação e Contribuição</h3>
 
-    <div class="prsps-dist text-center">
+    <div class="prospera-margin prsps-dist text-center">
       <table class="table table-bordered">
         <thead>
           <tr>
@@ -67,25 +67,27 @@
       <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="//player.vimeo.com/video/118732545" ></iframe>
       </div>
-      <p class="col-md-6 text-justify">Esse novo modelo de organização distribuída, deve ser construído sob um novo conjunto de princípios, opostos aos da OIM, sob um novo paradigma que priorize também a eficácia e não só a eficiência, sem hierarquia e funções pré-definidas, sem processos decisórios e seletivos, sem patrimônio ou fundos comuns administrados por uma equipe ou grupo. Uma organização aberta e inclusiva, transparente e que segue um modelo exponencial e abundante, com foco na evolução bem como na sobrevivência, uma organização que prospera.</p>
-      <p class="col-md-6 text-justify">As novas tecnologias da informação e comunicação móvel, principalmente a Internet, tem atuado fortemente nessa equação e colocado as Organizações de Modelo Industrial (OMI) em cheque, uma vez que permitem modelos distribuídos de organização, mostrando que a facilidade de conexão e acesso a informações tem um efeito devastador nos custos de transação, permitindo que a busca direta ao mercado seja feita com maior eficiência, velocidade, e eficiência que aquela feita por meio de uma “Firma”3.</p>
+    </div>
+    <div class="text-container">
+      <p class="prospera-margin col-md-6 text-justify">Esse novo modelo de organização distribuída, deve ser construído sob um novo conjunto de princípios, opostos aos da OIM, sob um novo paradigma que priorize também a eficácia e não só a eficiência, sem hierarquia e funções pré-definidas, sem processos decisórios e seletivos, sem patrimônio ou fundos comuns administrados por uma equipe ou grupo. Uma organização aberta e inclusiva, transparente e que segue um modelo exponencial e abundante, com foco na evolução bem como na sobrevivência, uma organização que prospera.</p>
+      <p class="prospera-margin col-md-6 text-justify">As novas tecnologias da informação e comunicação móvel, principalmente a Internet, tem atuado fortemente nessa equação e colocado as Organizações de Modelo Industrial (OMI) em cheque, uma vez que permitem modelos distribuídos de organização, mostrando que a facilidade de conexão e acesso a informações tem um efeito devastador nos custos de transação, permitindo que a busca direta ao mercado seja feita com maior eficiência, velocidade, e eficiência que aquela feita por meio de uma “Firma”3.</p>
     </div>
 
     <div class="companies-container row">
       <div class="col-md-2 col-md-offset-1 text-center">
-        <img class="logo" src="{% static 'img/logo-criptotransfer.jpg' %}" alt="Prospera">
+        <img src="{% static 'img/logo-criptotransfer.jpg' %}" alt="Criptotransfer">
       </div>
       <div class="col-md-2 text-center">
-        <img class="logo" src="{% static 'img/logo-blockpub.jpg' %}" alt="Prospera">
+        <img src="{% static 'img/logo-blockpub.jpg' %}" alt="Blockpub">
       </div>
       <div class="col-md-2 text-center">
-        <img class="logo" src="{% static 'img/logo-blockchainrevolution.jpg' %}" alt="Prospera">
+        <img src="{% static 'img/logo-blockchainrevolution.jpg' %}" alt="Blockchain Revolution">
       </div>
       <div class="col-md-2 text-center">
-        <img class="logo" src="{% static 'img/logo-justvirtual.jpg' %}" alt="Prospera">
+        <img src="{% static 'img/logo-justvirtual.jpg' %}" alt="Just Virtual">
       </div>
       <div class="col-md-2 text-center">
-        <img class="logo" src="{% static 'img/logo-pimpadas.jpg' %}" alt="Prospera">
+        <img src="{% static 'img/logo-pimpadas.jpg' %}" alt="Pimpadas">
       </div>
     </div>
   </section>
@@ -97,20 +99,21 @@
     <div class="row text-center">
       <div class="col-md-2 col-md-offset-3">
         <h4><i class="fa fa-facebook" aria-hidden="true"></i> Página no Facebook:</h4>
-        <img class="logo" src="{% static 'img/qr-exemplo.jpg' %}" alt="Prospera">
+        <img src="{% static 'img/qr-exemplo.jpg' %}">
       </div>
       <div class="col-md-2">
         <h4><i class="fa fa-facebook" aria-hidden="true"></i> Grupo no Facebook:</h4>
-        <img class="logo" src="{% static 'img/qr-exemplo.jpg' %}" alt="Prospera">
+        <img src="{% static 'img/qr-exemplo.jpg' %}">
       </div>
       <div class="col-md-2">
         <h4><i class="fa fa-whatsapp" aria-hidden="true"></i> Grupo no Whatsapp:</h4>
-        <img class="logo" src="{% static 'img/qr-exemplo.jpg' %}" alt="Prospera">
+        <img src="{% static 'img/qr-exemplo.jpg' %}">
       </div>
 
       <div class="col-xs-12">
         <img class="logo" src="{% static 'img/prospera-footer.png' %}" alt="Prospera">
       </div>
+
     </div>
 
   </section>
