Arrumando css para bloco de contato

--- a/plataforma/templates/pages/landing_page.html
+++ b/plataforma/templates/pages/landing_page.html
@@ -99,15 +99,15 @@
     <div class="row text-center">
       <div class="col-md-2 col-md-offset-3">
         <h4><i class="fa fa-facebook" aria-hidden="true"></i> Página no Facebook:</h4>
-        <img src="{% static 'img/qr-exemplo.jpg' %}">
+        <img class="qr-code" src="{% static 'img/qr-exemplo.jpg' %}">
       </div>
       <div class="col-md-2">
         <h4><i class="fa fa-facebook" aria-hidden="true"></i> Grupo no Facebook:</h4>
-        <img src="{% static 'img/qr-exemplo.jpg' %}">
+        <img class="qr-code" src="{% static 'img/qr-exemplo.jpg' %}">
       </div>
       <div class="col-md-2">
         <h4><i class="fa fa-whatsapp" aria-hidden="true"></i> Grupo no Whatsapp:</h4>
-        <img src="{% static 'img/qr-exemplo.jpg' %}">
+        <img class="qr-code" src="{% static 'img/qr-exemplo.jpg' %}">
       </div>
 
       <div class="col-xs-12">
