--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -207,6 +207,7 @@ h4{font-size: 12px;}
 
         h3{
           margin: 0;
+          margin-bottom: 50px;
         }
         p{margin-bottom: 0;}
         i{
@@ -215,6 +216,12 @@ h4{font-size: 12px;}
         }
         .row{
           margin: 0;
+        }
+        .qr-code{
+          margin: 35px 0;
+        }
+        .logo{
+          margin: 35px 0;
         }
       }
     }
