--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -87,6 +87,10 @@ h4{font-size: 12px;}
   font-size: 14px;
   letter-spacing: 0.45em;
   padding: 15px 22px;
+
+  &:hover{
+    color: $azulClaro;
+  }
 }
 
 // Maring
