--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -88,7 +88,7 @@ h4{font-size: 12px;}
   letter-spacing: 0.45em;
   padding: 15px 22px;
 
-  &:hover{
+  &:hover, &:focus{
     color: $azulClaro;
   }
 }
