Adicionando urls para header e botões

--- a/plataforma/templates/pages/landing_page.html
+++ b/plataforma/templates/pages/landing_page.html
@@ -7,8 +7,8 @@
     <img class="logo" src="{% static 'img/prospera-logo.png' %}" alt="Prospera">
 
     <div class="prospera-margin text-center">
-      <button class="btn btn-prospera btn-lg" href="{% url 'login' %}" role="button">Entrar</button>
-      <button class="btn btn-prospera btn-lg" href="{% url 'no_create' %}" role="button">Criar Conta</button>
+      <a class="btn btn-prospera btn-lg" href="{% url 'login' %}" role="button">Entrar</a>
+      <a class="btn btn-prospera btn-lg" href="{% url 'no_create' %}" role="button">Criar Conta</a>
     </div>
 
     <div class="prospera-margin text-center">
