--- a/plataforma/templates/base.html
+++ b/plataforma/templates/base.html
@@ -31,11 +31,11 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav">
-              <li><a class="scroll" href="#sobre">Prospera</a></li>
+              <li><a class="scroll" href="{% url 'home' %}">Prospera</a></li>
               <li><a class="scroll" href="#programacao">Quem Somos</a></li>
-              <li><a class="scroll" href="#participar">Comunidades</a></li>
+              <li><a class="scroll" href="{% url 'nos_list' %}">Comunidades</a></li>
               <li><a class="scroll" href="#contato">Contato</a></li>
-              <li><a class="scroll" href="#contato">Entrar</a></li>
+              <li><a class="scroll" href="{% url 'login' %}">Entrar</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
