--- a/plataforma/static/dev/scss/base.scss
+++ b/plataforma/static/dev/scss/base.scss
@@ -67,12 +67,14 @@ $gotham: 'gotham', sans-serif;
 }
 
 // Titles
-h3, h4{
+h1, h2, h3, h4{
   color: $branco;
   text-transform: uppercase;
   font-family: $gotham;
   letter-spacing: 0.2em;
 }
+h1{font-size: 24px;}
+h2{font-size: 18px;}
 h3{font-size: 14px;}
 h4{font-size: 12px;}
 
@@ -123,7 +125,7 @@ h4{font-size: 12px;}
           padding-top: 45px;
           margin-bottom: 60px;
         }
-        button{
+        a.btn-prospera{
           margin: 10px;
           width: 215px;
         }
@@ -226,6 +228,57 @@ h4{font-size: 12px;}
         }
         .logo{
           margin: 35px 0;
+        }
+      }
+    }
+
+    // Comunidades
+    #nos{
+      background-color: $azul;
+
+      p{
+        font-family: $gotham;
+        font-weight: 400;
+        font-size: 12px;
+        color: $branco;
+        letter-spacing: 0.05em;
+      }
+
+      .descricao-content{
+        max-width: 900px;
+        margin: auto;
+        padding: 80px 0;
+
+        p{
+          line-height: 2em;
+          margin-top: 38px;
+          padding-right: 30px;
+        }
+      }
+      .comunidades-content{
+        max-width: 1200px;
+        margin: auto;
+
+        .thumbnail{
+          background-color: $azul;
+          border: 1px solid $azul;
+
+          a{
+            font-size: 80px;
+            font-weight: bold;
+            color: $azul;
+          }
+          .caption{
+            // color: $branco;
+          }
+          .button-container{
+            background-color: $branco;
+            padding: 58px 0;
+            h2{
+              color: $azul;
+              letter-spacing: .1em;
+            }
+          }
         }
       }
     }
