--- a/plataforma/templates/pages/nos_list.html
+++ b/plataforma/templates/pages/nos_list.html
@@ -1,9 +1,19 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 {% block content %}
 
 <div id="nos">
-    <h1>Nós</h1>
+  <section class="descricao-content">
+    <h1>+ Comunidades +</h1>
+    <div class="row">
+      <p class="col-md-10 text-justify">
+        Em 1937 o economista Ronald Coase publicou o artigo A Natureza da Firma: origem, evolução e desenvolvimento, onde afirma que as organizações surgem para atuar nos mercados com o objetivo de diminuir os custos de transação (custos de busca e aquisição, de contratação e controle, de coordenação e de confiança).
+      </p>
+      <img class="inline-block" src="{% static 'img/prospera-circle.png' %}" alt="Prospera">
+    </div>
+  </section>
 
+  <section class="comunidades-content">
     <div class="row">
       {% for nos in object_list %}
       <div class="col-sm-6 col-md-4">
@@ -11,19 +21,27 @@
           {% if nos.imagem_listagem %}
             <img class="media-object" src="{{ nos.imagem_listagem.url }}" alt="...">
           {% else %}
-            <img class="media-object" src="http://placehold.it/300x300/e8117f/ffffff" alt="...">
+            <img class="media-object" src="http://placehold.it/400x300/e8117f/ffffff" alt="...">
           {% endif %}
           <div class="caption">
-            <h3>{{ nos.nome }}</h3>
+            <h2>{{ nos.nome }}</h2>
             <p>{{ nos.descricao }}</p>
-            <p><a href="{% url 'nos_detail' nos.slug %}" class="btn btn-default" role="button">Saiba Mais</a></p>
+            <!-- <p><a href="{% url 'nos_detail' nos.slug %}" class="btn btn-default" role="button">Saiba Mais</a></p> -->
           </div>
         </div>
       </div>
       {% endfor %}
-      <br />
-      <a href="{% url "nos_create" %}">Novo Nós</a>
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail text-center">
+          <div class="button-container">
+            <a href="{% url "nos_create" %}">+</a>
+            <h2>CRIAR UMA COMUNIDADE</h2>
+          </div>
+        </div>
+      </div>
+
     </div>
+  </section>
 </div>
 
 {% endblock %}
