--- a/plataforma/templates/pages/landing_page.html
+++ b/plataforma/templates/pages/landing_page.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% load staticfiles %}
+
+
+{% block bodyclass %}class="landing-page"{% endblock %}
 {% block content %}
 
 <div id="landing-page">
